<resources>
    <string name="app_name">CPCoinGame</string>
    <string name="txt_score">Score:</string>
    <string name="menu_new_game_text">New Game</string>
    <string name="menu_show_about_text">About</string>
    <string name="menu_show_highscore_text">Highscores</string>
    <string name="menu_show_web_page">Web Page</string>
    <string name="about_txt">This is ME!</string>
    <string name="gameEnded">Game Ended</string>
    <string name="menu_enable_controls">Toggle Controls</string>
    <string name="menu_toggle_sound">Toggle Sound</string>
    <string name="menu_settings">More Settings</string>
    <string name="menu_set_time">Set Time</string>
    <string name="menu_time_5">5 sec</string>
    <string name="menu_time_15">15 sec</string>
    <string name="menu_time_30">30 sec</string>
    <string name="menu_time_60">1 min</string>
    <string name="menu_time_unlimited">Unlimited</string>
    <string name="menu_stop_game_text">Stop Game</string>
    <string name="default_current_location">No GPS data..</string>
    <string name="txt_location">Location:</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="menu_show_ad">Show Ad</string>
</resources>
